--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "LidiaSimina",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "assert": "^2.1.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.2",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "supertest": "^7.0.0"
   },
   "type": "module"
 }
